# dotfiles

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Justfile  Makefile  README.md  Rprofile  aliases  aspell.en.pws  bash_profile  bash_prompt  bashrc  brews  dir_colors  docker-compose.yml  gemrc  gems  gitconfig  gitignore  gvimrc  inputrc  irbrc  lbdbrc  mail_rules.yml  mailcap  msmtprc  muttrc  notmuch-config  octaverc  offlineimap.py  offlineimaprc  r_packages  screenrc  setup.sh  tmux.conf  vimrc  wgetrc  zshrc
ansible/: apply_ansible  dotfiles.yml  inventory.ini
aspell/: aspell.conf  aspell.en.pws  sort_dictionary
atuin/: config.toml
background_tasks/: push_directory
bash/: bashrc  bashrc.old
bash_scripts/: tree
bioinformatics/: align_genomes_minimap  assembly_metaviral_spades  assembly_singlecell_spades  blast_to_normalised_coverage.py  build_gfa_cuttlefish  get_multimapping_reads.py  multi_references_reads.sam
blast/: blast_to_normalised_coverage.py
data/: apt-packages  brews  dock  fonts  gems  preview_parquet
dbt/: SPEC.md  dbt_analyse.py  dbt_batch_audit.py  dbt_deep_analysis.md  dbt_quick_analysis.md
duckdb/: dump_schema.py
examples/: Gemfile  Guardfile  autotest  rspec  static.Gemfile  static.config.ru  uk.me.michaelbarton.offlineimap.plist
fish/: config.fish  fish_plugins
ghostty/: config
git/: .gitignore  autocommit.json  autocommit.py  clean_branches.sh  gitconfig
github/: create_pr.bash
grafana/: query_grafana.bash
hammerspoon/: init.lua
hocon/: preview_hocon
irssi/: config
iterm2/: com.googlecode.iterm2.plist
jgi_bin/: fetch_uge_queue  metagenome_report  uge_queue  uge_queue_summary
jira_bin/: jira-add-file  jira-comment  jira-create  jira-description  jira-get-description  jira-get-title  jira-show  jira-view  template.tpl
k8s/: port_forward_service.bash
python/cookiecutter/scratch-python-template/{{cookiecutter.timestamp}}__{{cookiecutter.project_name}}/: .gitignore  Justfile  pyproject.toml
(+214 files in other folders)
