[tool.poetry]
name = "karius_taxonomy_mapping"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {version = "^24.3.0", extras = ["jupyter"]}
bump2version = "^1.0.1"
edx-lint = "^5.3.6"
isort = "^5.13.2"
mypy = "^1.8.0"
pandas-stubs = "^2.2.0.240218"
pydocstyle = "^6.3.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = [ "py310",]

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = 'jfrog'
url  = 'https://karius.jfrog.io/artifactory/api/pypi/karius-pypi-virtual/simple/'
secondary = true

