[tool.poetry]
name = "karius_taxonomy_mapping"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
edx-lint = "^5.3.6"
mypy = "^1.8.0"
pandas-stubs = "^2.2.0.240218"
pydocstyle = "^6.3.0"
pytest = "^8.0.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[[tool.poetry.source]]
name = 'jfrog'
url  = 'https://karius.jfrog.io/artifactory/api/pypi/karius-pypi-virtual/simple/'
secondary = true

